# quickform

./: .gitignore  README.md  quickform.cabal  stack.yaml
example/QuickForm/: Example.hs
example/QuickForm/Example/: Forms.hs  Types.hs
quickform/: README.md  quickform.cabal
quickform-react-hs/: quickform-react-hs.cabal  stack.yaml
quickform-react-hs/src/React/Flux/: Forms.hs
quickform-react-hs/src/React/Flux/Forms/: Actions.hs  Store.hs
quickform/src/: QuickForm.hs
quickform/src/QuickForm/: Form.hs  Lens.hs  TypeLevel.hs  Validation.hs
quickform/test/: Spec.hs
react-hs-sui/: react-hs-sui.cabal  stack.yaml
react-hs-sui/src/React/Flux/: SemanticUI.hs
src/: QuickForm.hs
src/QuickForm/: BranchValidation.hs  Form.hs  Lens.hs  Lenses.hs  Many.hs  Pair.hs  Sub.hs  TypeLevel.hs  Validation.hs
test/: Example.hs  Spec.hs
test/QuickForm/Test/: FormSpec.hs  Orphans.hs
