name:                quickform
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md
                  , LICENSE

flag dev
  description: Turns off custom type errors
  default: False

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  if flag(dev)
    cpp-options:       -DNO_FANCY_ERRORS

  exposed-modules:     QuickForm
                     , QuickForm.BranchValidation
                     , QuickForm.Form
                     , QuickForm.Lenses
                     , QuickForm.Many
                     , QuickForm.Sub
                     , QuickForm.TypeLevel
                     , QuickForm.Validation

  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , containers
                     , deepseq
                     , text

  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators

test-suite quickform-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , quickform
                     , hspec
                     , QuickCheck
                     , containers
                     , lens
                     , text
                     , should-not-typecheck

test-suite README
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             README.lhs

  build-depends:       base
                     , quickform
                     , containers
                     , lens
                     , text

