name:                quickform
version:             0.1.0
license:             BSD3
license-file:        LICENSE
synopsis:            Type level HTML forms
description:         This library provides core utilities for describing and
                     validating HTML forms in haskell web applications.
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md
                  , LICENSE

flag NoErrors
  description: Turns off custom type errors
  default: False

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  if flag(NoErrors)
    cpp-options:       -DNO_FANCY_ERRORS

  exposed-modules:     QuickForm
                     , QuickForm.Form
                     , QuickForm.TypeLevel
                     , QuickForm.Validation

  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , containers
                     , unordered-containers
                     , deepseq
                     , lens
                     , text
                     , data-default

  default-extensions:  ConstraintKinds
                     , DataKinds
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators

test-suite quickform-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DNO_FANCY_ERRORS
  -- Stack doesn't seem to use this, so use --flag quickform:NoErrors when
  -- testing or you may get a lot of errors due to should-not-typecheck

  build-depends:       base
                     , quickform
                     , hspec
                     , QuickCheck
                     , containers
                     , lens
                     , text
                     , should-not-typecheck

test-suite README
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             README.lhs

  build-depends:       base
                     , quickform
                     , containers
                     , lens
                     , text

