name:                quickform
version:             0.1.0
license:             BSD3
license-file:        LICENSE
synopsis:            Type level HTML forms
description:         This library provides core utilities for describing and
                     validating HTML forms in haskell web applications.
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md
                  , LICENSE

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
      QuickForm
    , QuickForm.Form
    , QuickForm.TypeLevel
    , QuickForm.Validation
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , containers
    , unordered-containers
    , text
    , vector
    , data-default
  default-extensions:
      ConstraintKinds
    , DataKinds
    , FlexibleInstances
    , FlexibleContexts
    , MultiParamTypeClasses
    , ScopedTypeVariables
    , TypeApplications
    , TypeOperators

library quickform-example
  default-language: Haskell2010
  hs-source-dirs: example
  exposed-modules:
      QuickForm.Example
    , QuickForm.Example.Forms
    , QuickForm.Example.Types
  build-depends:
      base
    , quickform
    , aeson
    , containers
    , data-default
    , either
    , text
    , unordered-containers

test-suite quickform-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      QuickForm.Test.FormSpec
    , QuickForm.Test.Orphans
  ghc-options: -Wall
  build-depends:
      base
    , quickform
    , quickform-example

    , aeson
    , containers
    , data-default
    , either
    , text
    , unordered-containers

    , hspec
    , generic-arbitrary
    , QuickCheck
    , quickcheck-instances

--test-suite README
--  type:                exitcode-stdio-1.0
--  default-language:    Haskell2010
--  hs-source-dirs:      .
--  main-is:             README.lhs
--
--  build-depends:       base
--                     , quickform
--                     , containers
--                     , text

