name:                react-hs-sui
version:             0.1.0.0
license:             AllRightsReserved
author:              Tom Smalley
maintainer:          tfsmalley@gmail.com
copyright:           Copyright: (c) 2017 Tom Smalley
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     React.Flux.SemanticUI
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , lens
                     , ghcjs-base
                     , ghcjs-prim
                     , http-api-data
                     , mtl
                     , network-uri
                     , react-hs
                     , text
                     , unordered-containers
                     , uri-bytestring
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite react-flux-semantic-ui-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
